# Nextjs-and-FastAPI

./: README.md  SPEC.md
backend/: main.py  pyproject.toml  requirements.txt  scraper.py  summarizer.py
frontend/: README.md  next.config.ts  package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: SummaryCard.tsx  SummaryForm.tsx
